--- a/backend/resources/css/app.css
+++ b/backend/resources/css/app.css
@@ -4,27 +4,27 @@
 
 @layer base {
   .py-navbar-item {
-    @apply py-6
+    @apply py-6;
   }
 
   .pt-navbar-item {
-    @apply pt-6
+    @apply pt-6;
   }
 
   .pb-navbar-item {
-    @apply pb-6
+    @apply pb-6;
   }
 
   .px-navbar-item {
-    @apply px-3
+    @apply px-3;
   }
 
   .pl-navbar-item {
-    @apply pl-3
+    @apply pl-3;
   }
 
   .pr-navbar-item {
-    @apply pr-3
+    @apply pr-3;
   }
 }
 
@@ -38,18 +38,41 @@ body {
   background-color: #e5e7eb;
 }
 
-.wysiwyg-content h3,
-.wysiwyg-content h4 {
-  font-weight: 600;
-  margin-top: 1rem;
+.wysiwyg-content > blockquote,
+.wysiwyg-content > dl,
+.wysiwyg-content > dd,
+.wysiwyg-content > h1,
+.wysiwyg-content > h2,
+.wysiwyg-content > h3,
+.wysiwyg-content > h4,
+.wysiwyg-content > h5,
+.wysiwyg-content > h6,
+.wysiwyg-content > hr,
+.wysiwyg-content > figure,
+.wysiwyg-content > p,
+.wysiwyg-content > pre {
+  margin: revert;
 }
 
-.wysiwyg-content table > tbody > tr > td {
-  padding: 0.25rem 0.125rem;
+.wysiwyg-content > ol,
+.wysiwyg-content > ul {
+  list-style: revert;
+  margin: revert;
+  padding: revert;
 }
 
-.wysiwyg-content table > tbody > tr > td:first-child {
-  font-weight: bold;
+.wysiwyg-content > table {
+  border-collapse: revert;
+}
+
+.wysiwyg-content > h1,
+.wysiwyg-content > h2,
+.wysiwyg-content > h3,
+.wysiwyg-content > h4,
+.wysiwyg-content > h5,
+.wysiwyg-content > h6 {
+  font-size: revert;
+  font-weight: revert;
 }
 
 .table > tbody > tr > td,
