--- a/backend/resources/css/app.css
+++ b/backend/resources/css/app.css
@@ -84,3 +84,16 @@ body {
 .table-sm > thead > tr > th {
   padding: 0.25rem;
 }
+
+.category-list > .category-item:hover > .category-list {
+  display: flex;
+}
+
+.category-list
+  > .category-item
+  > .category-list
+  > .category-item
+  > .category-list {
+  left: 100%;
+  top: 0;
+}
